--- a/views/header.ejs
+++ b/views/header.ejs
@@ -125,7 +125,7 @@ $(document).ready(function() {
         <li class="nav-item">
           <a class="nav-link pl-0" href="#"> <strong>All category</strong></a>
         </li>
-        <% categories.forEach((category) => { %>
+        <% locals.categories.forEach((category) => { %>
           <li class="nav-item">
             <a class="nav-link" href="/categoria/<%= category.id %>/<%= category.slug %>"><%= category.category %></a>
           </li>
