--- a/views/header.ejs
+++ b/views/header.ejs
@@ -81,31 +81,56 @@ $(document).ready(function() {
 					</div>
 				</a>
 			</div> <!-- widget .// -->
-			<div class="widget-header dropdown">
+			<% if (user) { %>
 				<a href="#" class="ml-3 icontext" data-toggle="dropdown" data-offset="20,10">
 					<div class="icon-wrap icon-xs bg2 round text-secondary"><i class="fa fa-user"></i></div>
 					<div class="text-wrap">
-						<small>Hello.</small>
-						<span>Login <i class="fa fa-caret-down"></i></span>
+						<span><%- user.name %> <i class="fa fa-caret-down"></i></span>
 					</div>
 				</a>
-				<div class="dropdown-menu dropdown-menu-right">
-					<form class="px-4 py-3">
-						<div class="form-group">
-						  <label>Email address</label>
-						  <input type="email" class="form-control" placeholder="email@example.com">
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<% if (user.roles.indexOf('customer') >= 0) { %>
+					<a class="dropdown-item" href="#">Minha conta</a>
+					<a class="dropdown-item" href="#">Meus pedidos</a>
+					<% } %>
+					<% if (user.roles.indexOf('financial') >= 0) { %>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="#">Painel Financeiro</a>
+					<% } %>
+					<% if (user.roles.indexOf('admin') >= 0) { %>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="#">Painel Administrativo</a>
+					<% } %>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="/logout">Sair</a>
+				</div>
+			<% } else { %>			
+				<div class="widget-header dropdown">
+					<a href="#" class="ml-3 icontext" data-toggle="dropdown" data-offset="20,10">
+						<div class="icon-wrap icon-xs bg2 round text-secondary"><i class="fa fa-user"></i></div>
+						<div class="text-wrap">
+							<small>Hello.</small>
+							<span>Login <i class="fa fa-caret-down"></i></span>
 						</div>
-						<div class="form-group">
-						  <label>Password</label>
-						  <input type="password" class="form-control" placeholder="Password">
-						</div>
-						<button type="submit" class="btn btn-primary">Sign in</button>
-						</form>
-						<hr class="dropdown-divider">
-						<a class="dropdown-item" href="#">Have account? Sign up</a>
-						<a class="dropdown-item" href="#">Forgot password?</a>
-				</div> <!--  dropdown-menu .// -->
-			</div> <!-- widget  dropdown.// -->
+					</a>
+					<div class="dropdown-menu dropdown-menu-right">
+						<form class="px-4 py-3" action="/login" method="POST">
+							<div class="form-group">
+								<label>Email address</label>
+								<input type="email" class="form-control" name="email" placeholder="email@example.com">
+							</div>
+							<div class="form-group">
+								<label>Password</label>
+								<input type="password" class="form-control" name="password" placeholder="Password">
+							</div>
+							<button type="submit" class="btn btn-primary">Sign in</button>
+							</form>
+							<hr class="dropdown-divider">
+							<a class="dropdown-item" href="#">Have account? Sign up</a>
+							<a class="dropdown-item" href="#">Forgot password?</a>
+					</div> <!--  dropdown-menu .// -->
+				</div> <!-- widget  dropdown.// -->
+			<% } %>
 		</div>	<!-- widgets-wrap.// -->	
 	</div> <!-- col.// -->
 </div> <!-- row.// -->
