--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -148,13 +148,11 @@ $(document).ready(function() {
     <div class="collapse navbar-collapse" id="main_nav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link pl-0" href="#"> <strong>All category</strong></a>
+          <a class="nav-link pl-0" href="/admin/categorias">Categorias</a>
         </li>
-        <% locals.categories.forEach((category) => { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/categoria/<%= category.id %>/<%= category.slug %>"><%= category.category %></a>
-          </li>
-        <% }) %>
+        <li class="nav-item">
+          <a class="nav-link pl-0" href="/admin/produtos">Produtos</a>
+        </li>
       </ul>
     </div> <!-- collapse .// -->
   </div> <!-- container .// -->
