--- a/views/admin/categories/update.ejs
+++ b/views/admin/categories/update.ejs
@@ -25,7 +25,7 @@
         <div class="card">
           <header class="card-header">
             <a href="/admin/categorias/" class="float-right btn btn-outline-primary mt-1">Voltar</a>
-            <h4 class="card-title mt-2">Criar nova Categoria</h4>
+            <h4 class="card-title mt-2">Editar Categoria</h4>
           </header>
           <article class="card-body">
             <form method="POST">
