--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -18,13 +18,13 @@
             <aside class="col-sm-6 border-right">
               <article class="gallery-wrap">
                 <div class="img-big-wrap">
-                  <div> <a href="images/items/1.jpg" data-fancybox=""><img src="images/items/1.jpg"></a></div>
+                  <div> <a href="/images/items/1.jpg" data-fancybox=""><img src="/images/items/1.jpg"></a></div>
                 </div> <!-- slider-product.// -->
                 <div class="img-small-wrap">
-                  <div class="item-gallery"> <img src="images/items/1.jpg"></div>
-                  <div class="item-gallery"> <img src="images/items/2.jpg"></div>
-                  <div class="item-gallery"> <img src="images/items/3.jpg"></div>
-                  <div class="item-gallery"> <img src="images/items/4.jpg"></div>
+                  <div class="item-gallery"> <img src="/images/items/1.jpg"></div>
+                  <div class="item-gallery"> <img src="/images/items/2.jpg"></div>
+                  <div class="item-gallery"> <img src="/images/items/3.jpg"></div>
+                  <div class="item-gallery"> <img src="/images/items/4.jpg"></div>
                 </div> <!-- slider-nav.// -->
               </article> <!-- gallery-wrap .end// -->
             </aside>
